@@ -106,11 +106,9 @@ public class MyPageService {
     }
 
     public List<LikeCommentResponseDTO> getMyLikeComments(final long userId) {
-        List<Comment> commentsLikedByUser = commentLikeRepository.findCommentsLikedByUser(userId);
-
-        return commentsLikedByUser.stream()
+        return commentLikeRepository.findLikedCommentsByUserIdWithPost(userId).stream()
                 .map(LikeCommentResponseDTO::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public UserCommentListDTO getMyCommentPosts(final long userId) {
@@ -124,7 +122,7 @@ public class MyPageService {
                 comments.stream()
                         .map(
                                 comment -> {
-                                    Post post = postMap.get(comment.getPost().getId());
+                                    Post post = postMap.get(comment.getPostId());
                                     if (post == null) {
                                         throw new PostException(POST_NOT_FOUND);
                                     }
@@ -141,10 +139,7 @@ public class MyPageService {
     }
 
     private static List<Long> getPostIds(List<Comment> comments) {
-        return comments.stream()
-                .map(comment -> comment.getPost().getId())
-                .distinct()
-                .collect(Collectors.toList());
+        return comments.stream().map(Comment::getPostId).distinct().collect(Collectors.toList());
     }
 
     public List<FailQuizResponseDTO> getMyFailQuizzes(final long userId, Level level) {
